--- a/styles.css
+++ b/styles.css
@@ -17,3 +17,16 @@
     color: #cccccc;
     /* Replace with your desired color */
 }
+
+.navbar .dropdown-menu>li>a {
+    background-color: #08392b;
+    /* Change this to your desired text color */
+}
+
+.navbar .dropdown-menu>li>a:hover,
+.navbar .dropdown-menu>li>a:focus {
+    background-color: #08392b;
+    /* Change this to your desired highlight color */
+    color: #cccccc;
+    /* Change this to your desired text color */
+}
