link colour change

--- a/custom.scss
+++ b/custom.scss
@@ -3,12 +3,12 @@
 $link-color: #7d6a2a;
 $primary-color: #08392b;
 
-/*-- scss:rules --*/
-/* define named colours */
-:root {
-    --primary-color: #08392b;
-    --secondary-color: #6ab04c;
-    --blue-green: #2e8b7d;
-    --brown: #7d6a2a;
+// /*-- scss:rules --*/
+// /* define named colours */
+// :root {
+//     --primary-color: #08392b;
+//     --secondary-color: #6ab04c;
+//     --blue-green: #2e8b7d;
+//     --brown: #7d6a2a;
 
-}
+// }
